Bugfix: remove extra padding on safety manual content

--- a/sites/all/themes/mcneese_www/css/all/www-all-web_document-639.css
+++ b/sites/all/themes/mcneese_www/css/all/www-all-web_document-639.css
@@ -247,11 +247,6 @@
   text-transform: uppercase;
 }
 
-.mcneese.node-type-document.node-theme-document-639 #safety_manual-content .content-list > li.list-item-2 > .list-text,
-.mcneese.node-type-document.node-theme-document-639 #safety_manual-content .content-list > li.list-item-2 > .list-item-wrapper > .list-text {
-  padding-left: 60px;
-}
-
 .mcneese.node-type-document.node-theme-document-639 #safety_manual-content .content-list > li.list-item-3 > .list-count,
 .mcneese.node-type-document.node-theme-document-639 #safety_manual-content .content-list > li.list-item-3 > .list-item-wrapper > .list-count {
   width: 50px;
